--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer>      <div className="attribution">Icons made by <a className="attribution" href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a className="attribution" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></footer>
   </body>
 </html>
